# tinyGS-api-server

./: .env.example  .infisical.json  README.md  main.py  pyproject.toml
app/: config_manager.py  db.py  main.py  model.py  routes.py  schemas.py  users.py
app/auth/: jwt_bearer.py  jwt_handler.py
app/routers/: auth.py  user.py
app/utils/: config.py  email.py
docker/: docker-compose.yml
