[tool.poetry]
name = "tinygs-api-server-new"
version = "0.1.0"
description = ""
authors = ["jarp0l <jarp0l@duck.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
fastapi-users = {extras = ["beanie"], version = "^10.3.0"}
python-decouple = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
