[tool.poetry]
name = "tinygs-api-server"
version = "0.1.0"
description = ""
authors = ["jarp0l <jarp0l@duck.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
python-decouple = "^3.7"
fastapi-users = {git = "git@github.com:jarp0l/fastapi-users.git"}
fastapi-users-db-beanie = ">=1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
